--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,25 +1,10 @@
-# Root logger option
-log4j.rootLogger=DEBUG, file, fileError, stdout
+# suppress inspection "UnusedProperty" for whole file
+log4j.rootLogger=INFO, out
 
-# Direct log messages to a log file
- log4j.appender.file=org.apache.log4j.RollingFileAppender
- log4j.appender.file.File=logs/logsAutotest.log
- log4j.appender.file.MaxFileSize=10MB
- log4j.appender.file.MaxBackupIndex=10
- log4j.appender.file.layout=org.apache.log4j.PatternLayout
- log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%M:%L - %m %n
+# CONSOLE appender not used by default
+log4j.appender.out=org.apache.log4j.ConsoleAppender
+log4j.appender.out.layout=org.apache.log4j.PatternLayout
+log4j.appender.out.layout.ConversionPattern=%d %-5p %c{1} - %m%n
+log4j.throwableRenderer=org.apache.log4j.EnhancedThrowableRenderer
 
-# Direct log messages to a log fileError
-log4j.appender.fileError=org.apache.log4j.RollingFileAppender
-log4j.appender.fileError.File=logs/ERROR_Logs.log
-log4j.appender.fileError.MaxFileSize=10MB
-log4j.appender.fileError.MaxBackupIndex=10
-log4j.appender.fileError.Threshold=WARN
-log4j.appender.fileError.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileError.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%M:%L - %m %n
-
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-4p] %d{yyyy-MM-dd HH:mm:ss} [%t] %c{1}:%M:%L - %m %n
+log4j.logger.org.apache = DEBUG
